--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon"
   },
   "author": "Ariyaman",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "@babel/cli": "^7.23.9",
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.28",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
