--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@babel/cli": "^7.23.9",
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.28",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
