--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mailgen": "^2.0.7",
     "@types/node": "^20.11.28",
+    "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
@@ -28,7 +30,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.28",
     "mongoose": "^8.2.2",
+    "nodemailer": "^6.9.13",
     "socket.io": "^4.7.5"
   }
 }
