--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mailgen": "^2.0.7",
+    "@types/mongoose": "^5.11.97",
+    "@types/mongoose-paginate-v2": "^1.6.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.28",
     "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.1.0",
@@ -32,6 +35,9 @@
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.28",
     "mongoose": "^8.2.2",
+    "mongoose-paginate-ts": "^1.3.1",
+    "mongoose-paginate-v2": "^1.8.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "socket.io": "^4.7.5"
   }
