--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@types/mailgen": "^2.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/mongoose-paginate-v2": "^1.6.5",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.28",
     "@types/nodemailer": "^6.4.14",
+    "@types/winston": "^2.4.4",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "winston": "^3.13.0"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -37,6 +40,7 @@
     "mongoose": "^8.2.2",
     "mongoose-paginate-ts": "^1.3.1",
     "mongoose-paginate-v2": "^1.8.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "socket.io": "^4.7.5"
